@@ -1,3 +1,10 @@
+2005-02-27 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* libplanner/mrp-sql.c:
+	* src/planner-sql-plugin.c:
+	Connect to the Postgres SQL host given by the user.
+	Changes done in airplane returing from FOSDEM 2005 :)
+	
 2005-02-25  Richard Hult  <richard@imendio.com>
 
 	* src/planner-html-plugin.c (html_plugin_ok_button_clicked):
